2007-01-30  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version): release 0.9975-12
	* man/lmer-class.Rd: Fix default value of REML argument in
	documentation of some methods (Kurt Hornik).
	* src/lmer.c (mer2_getPars): fixed thinko, caught by Andrew
	Robinson, in the declaration of **st.

2007-01-28  Douglas Bates  <bates@R-project.org>

	* R/lmer.R (lmer2): allow for specification of a start argument

2007-01-25  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version): release 0.9975-11
	* src/glmer.[ch],init.c R/lmer.R: incorporate "deviance" argument
	in mcmcsamp method for glmer objects.
	* man/*.Rd: the lmer2 constructor and the mer2 class

2007-01-25  Douglas Bates  <bates@r-project.org>

	* src/glmer.c (internal_bhat): reweight before the first factoring

2007-01-17  Douglas Bates  <bates@R-project.org>

	* src/init.c: Remove bstar from the dims slot of lmer2 objects.
	* R/lmer.R (ST2Omega): Added a (hidden) conversion function from
	the lmer2 representation to the lmer representation as a temporary
	measure.

2007-01-10  Douglas Bates  <bates@r-project.org>

	* R/lmer.R (mcmcsamp): Add 'deviance' argument for mcmcsamp method.

2006-12-13  Douglas Bates  <bates@stat.wisc.edu>

	* src/lmer.[ch],init.c (mer2_setPars): Added mer2 extractors.

2006-12-01  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version, Date): 0.9975-10
	
	* R/lmer.R (lmerFrames): Use model.response(mf, "any") (suggested
	by Brian Ripley).
	* R/lmer.R (lmerControl), man/lmer.Rd: Change default of usePQL
	control option to FALSE.
	* R/lmer.R (lmer): print revised relative tolerance only if
	msVerbose is TRUE.
	* R/lmer.R (lmerFactorList): allow nlev == nobs for binomial GLMMs
	(problem report from Sandy Weisberg).

2006-11-14  Douglas Bates  <bates@stat.wisc.edu>

	* R/carryOver.R (fn): Allow factors on the LHS of carry.

	* src/lmer.c: Reset the status appropriately.
	* src/lme4_utils: Reformat source code.
