@@ -1,3 +1,8 @@
+2007-02-03  Douglas Bates  <bates@r-project.org>
+
+	* src/lmer.c (internal_mer2_effects, internal_TS_multiply):
+	Apply the correct permutation to get b*. Transform from b* to b. 
+
 2007-01-30  Douglas Bates  <bates@stat.wisc.edu>
 
 	* DESCRIPTION (Version): release 0.9975-12
